--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -1,1 +1,17 @@
-
+<html>
+  <head>
+    <title>Annika Schultze</title>
+  </head>
+    <body>
+      <p>Hello!</p>
+      <h1>My name is ANNIKA SCHULTZE</h1>
+      <h2>My pronouns are she/her/hers!</h2>
+      <h3>Course Objectives</h3>
+        <p>In this course, I am hoping that I will be able to porduce a website of my own after being done with the course to use for things such as job applications and a place to store my projects and art work.</p>
+      <h4>About Me!</h4>
+        <p>I am a business major studying finance and marketing and will graduate this May. I was born and raised in Denver, CO and have not been able to leave this beautiful place I call home.<p/>
+        <p>In my spare time I enjoy working out, skiing, snowboarding, painting, and spending time with family and friends. I am a huge Nuggets fan and love to go to games with my family. I also have two dogs, Miles and Max who are a little bit crazy, but never fail to keep us entertained!</p>
+      <a href="https://github.com/AnSchultze18/AnSchultze18.github.io/blob/main/img/annikaimage2.jpg">this links to my image</a>
+      <a href="https://www.youtube.com/watch?v=Zy4KtD98S2c">this links to my youtube video</a>
+    </body>
+</html>
