--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Annika Schultze</title>
+    <meta charset="UTF-8">
   </head>
     <body>
       <h1>My name is ANNIKA SCHULTZE</h1>
@@ -10,7 +11,7 @@
       <h4>About Me!</h4>
         <p>I am a business major studying finance and marketing and will graduate this May. I was born and raised in Denver, CO and have not been able to leave this beautiful place I call home.<p/>
         <p>In my spare time I enjoy working out, skiing, snowboarding, painting, and spending time with family and friends. I am a huge Nuggets fan and love to go to games with my family. I also have two dogs, Miles and Max who are a little bit crazy, but never fail to keep us entertained!</p>
-      <a href="https://github.com/AnSchultze18/AnSchultze18.github.io/blob/main/img/annikaimage2.jpg">this links to my image</a>
+      <img src="https://github.com/AnSchultze18/AnSchultze18.github.io/blob/main/img/annikaimage2.jpg">
       <a href="https://www.youtube.com/watch?v=Zy4KtD98S2c">this links to my youtube video</a>
     </body>
 </html>
