--- a/ica/ica3a.html
+++ b/ica/ica3a.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="author" content="Eileen Dover">
 		<link rel="stylesheet" href="style.css" type="text/css">
-		<title>Re: Eileen Dover University Application</title>
+		<title>Re: Eileen Dover university application</title>
 	</head>
 
 	<body>
