--- a/ica/ica3a.html
+++ b/ica/ica3a.html
@@ -19,7 +19,7 @@
 			<strong>Email</strong>: <a href="mailto:no_reply@example.com">no_reply@example.com</a>
 		</address>
 		
-		<p class="sender-column">
+		<p> class="sender-column"
 			20 January 2016
 		</p>
 		
