--- a/ica/ica3a.html
+++ b/ica/ica3a.html
@@ -17,11 +17,11 @@
 			USA<br>
 			<strong>Tel</strong>: <a href="tel:123-456-7890">123-456-7890</a><br>
 			<strong>Email</strong>: <a href="mailto:no_reply@example.com">no_reply@example.com</a>
-		</address>
+		</address class="sender-column">
 		
-		<p> class="sender-column"
+		<p class="sender-column">
 			20 January 2016
-		</p>
+		</p class="sender-column">
 		
 		<address>
 			<strong>Miss Eileen Dover</strong> <br>
