--- a/ica/ica3a.html
+++ b/ica/ica3a.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body>
-		<address class="sender-column">
+		<address>
 			<strong>Dr. Eleanor Gaye</strong> <br>
 			Awesome Science faculty <br>
 			University of Awesome <br>
@@ -17,11 +17,11 @@
 			USA<br>
 			<strong>Tel</strong>: <a href="tel:123-456-7890">123-456-7890</a><br>
 			<strong>Email</strong>: <a href="mailto:no_reply@example.com">no_reply@example.com</a>
-		</address class="sender-column">
+		</address>
 		
-		<p class="sender-column">
+		<p>
 			20 January 2016
-		</p class="sender-column">
+		</p>
 		
 		<address>
 			<strong>Miss Eileen Dover</strong> <br>
