--- a/wa/wa4.html
+++ b/wa/wa4.html
@@ -29,3 +29,35 @@
 
   </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Fundamental CSS comprehension</title>
+    <link rel="stylesheet" href="/css/wa4.css">
+  </head>
+  <body>
+
+  <section class="card2">
+    <header>
+      <h2>Annika Schultze</h2>
+    </header>
+    <article>
+      <img src="annikaimage2.jpg" alt="A picture of Annika in Denver enjoying the view!">
+      <p>I love dogs<br>
+         Im from Denver, CO<br>
+         My favorite color is pink<br>
+         I have a brother and a sister<br>
+         My favorite place to travel to is Costa Rica<br>
+        <strong>Tel</strong>: 01234 567 890<br>
+        <strong>Mail</strong>: annika.schultze@colorado.edu</p>
+    </article>
+    <footer>
+      <p>Finance, Marketing, and Creative Tech Student</p>
+    </footer>
+  </section>
+
+  </body>
+</html>
