--- a/wa/wa4.html
+++ b/wa/wa4.html
@@ -13,7 +13,7 @@
       <h2>Chris Mills</h2>
     </header>
     <article>
-      <img src="chrismills.jpg" alt="A picture of Chris - a man with glasses, a beard, and a silly wooly hat">
+      <img src="./../img/chrismills.jpg" alt="A picture of Chris - a man with glasses, a beard, and a silly wooly hat">
       <p>50 My Street<br>
          The Town<br>
          Gray Peach<br>
@@ -45,7 +45,7 @@
       <h2>Annika Schultze</h2>
     </header>
     <article>
-      <img src="annikaimage2.jpg" alt="A picture of Annika in Denver enjoying the view!">
+      <img src="./../img/annikaimage2.jpg" alt="A picture of Annika in Denver enjoying the view!">
       <p>I love dogs<br>
          Im from Denver, CO<br>
          My favorite color is pink<br>
