--- a/wa/wa4.html
+++ b/wa/wa4.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
+    <link rel="stylesheet" href="../css/wa4.css">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Fundamental CSS comprehension</title>
-    <link rel="stylesheet" href="/css/wa4.css">
   </head>
   <body>
 
@@ -13,7 +13,7 @@
       <h2>Chris Mills</h2>
     </header>
     <article>
-      <img src="./../img/chrismills.jpg" alt="A picture of Chris - a man with glasses, a beard, and a silly wooly hat">
+      <img src="chris.jpg" alt="A picture of Chris - a man with glasses, a beard, and a silly wooly hat">
       <p>50 My Street<br>
          The Town<br>
          Gray Peach<br>
@@ -27,18 +27,7 @@
     </footer>
   </section>
 
-  </body>
-</html>
 
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Fundamental CSS comprehension</title>
-    <link rel="stylesheet" href="/css/wa4.css">
-  </head>
-  <body>
 
   <section class="card2">
     <header>
