--- a/html-midterm/page4.html
+++ b/html-midterm/page4.html
@@ -34,9 +34,9 @@
                 <th>Other?</th>
             </tr>
             <tr>
-                <td><img src="img/dogsFrolic.png" alt="two dogs playing in a field"></td>
-                <td><img src="img/boxingCats.png" alt="two cats in a boxing ring"></td>
-                <td><img src="img/diamondAlien.png" alt="aliens in space with diamonds"></td>
+                <td><img src="./../img/dogsFrolic.png" alt="two dogs playing in a field"></td>
+                <td><img src="./../img/boxingCats.png" alt="two cats in a boxing ring"></td>
+                <td><img src="./../img/diamondAlien.png" alt="aliens in space with diamonds"></td>
             </tr>
             <tr>
                 <td><img src="img/dogSinging.png" alt="a dog on stage"></td>
