--- a/html-midterm/page4.html
+++ b/html-midterm/page4.html
@@ -39,14 +39,14 @@
                 <td><img src="./../img/diamondAlien.png" alt="aliens in space with diamonds"></td>
             </tr>
             <tr>
-                <td><img src="img/dogSinging.png" alt="a dog on stage"></td>
-                <td><img src="img/orangeCat.png" alt="and roange cat with yarn"></td>
-                <td><img src="img/creature.png" alt="an unknown purple creature"></td>
+                <td><img src="./../img/dogSinging.png" alt="a dog on stage"></td>
+                <td><img src="./../img/orangeCat.png" alt="and roange cat with yarn"></td>
+                <td><img src="./../img/creature.png" alt="an unknown purple creature"></td>
             </tr>
             <tr>
-                <td><img src="img/labLab.png" alt="a dog at a science desk"></td>
-                <td><img src="img/sunCat.png" alt="a cat in the sun"></td>
-                <td><img src="img/aliensPeace.png" alt="green aliens"></td>
+                <td><img src="./../img/labLab.png" alt="a dog at a science desk"></td>
+                <td><img src="./../img/sunCat.png" alt="a cat in the sun"></td>
+                <td><img src="./../img/aliensPeace.png" alt="green aliens"></td>
             </tr>
     
         </table>
