--- a/wa/wa7/wa7.html
+++ b/wa/wa7/wa7.html
@@ -18,7 +18,7 @@
         <a>More</a>
         <a>Socials</a>
     </nav>
-    <img src="img/discocollage.jpg">
+    <img src="img/discocollage.jpg" alt="discocollage">
 
 </body>
 </html>
