--- a/css-midterm/midterm.html
+++ b/css-midterm/midterm.html
@@ -50,7 +50,7 @@
       <p>Thank you for visiting my site and feel free to stay updated on my life through my LinkedIn, Creative Portfolio, and Resume</p>
       <a href="https://www.linkedin.com/in/annikaschultze/">My LinkedIn</a>
       <a href="https://annischultze.wixsite.com/my-site">My Creative Portfolio</a>
-      <a href="cssmidtermimages/Annika Schultze Resume February 2023.pdf">My Resume</a>
+      <a href="cssmidtermimages/AnnikaSchultzeResumeFebruary2023.pdf">My Resume</a>
       
 
     </article>
