--- a/wa/wa9/wa9.html
+++ b/wa/wa9/wa9.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="wa9.js">
-    <title>A Silly Story</title>
 
-    <title>Silly story generator</title>
+    <title>Silly Story Generator</title>
 
     <style>
 
@@ -51,9 +49,8 @@
     <div>
       <button class="randomize">Generate random story</button>
     </div>
+    <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
-    
-
-    
+    <script src="wa9.js"></script>
   </body>
 </html>
