--- a/wa/wa9/wa9.html
+++ b/wa/wa9/wa9.html
@@ -4,37 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="wa9.css">
 
     <title>Silly Story Generator</title>
 
-    <style>
-
-    body {
-      font-family: helvetica, sans-serif;
-      width: 350px;
-    }
-
-    label {
-      font-weight: bold;  
-    }
-
-    div {
-      padding-bottom: 20px;
-    }
-
-    input[type="text"] {
-      padding: 5px;
-      width: 150px;
-    }
-
-    p {
-      background: #FFC125;
-      color: #5E2612;
-      padding: 10px;
-      visibility: hidden;
-    }
-
-    </style>
   </head>
 
   <body>
@@ -49,7 +22,6 @@
     <div>
       <button class="randomize">Generate random story</button>
     </div>
-    <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
     <script src="wa9.js"></script>
   </body>
