--- a/wa/wa9/wa9.html
+++ b/wa/wa9/wa9.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="wa9.css">
 
-    <title>Silly Story Generator</title>
+    <title>wa9.html</title>
 
   </head>
 
