--- a/ica/ica10/ica10.html
+++ b/ica/ica10/ica10.html
@@ -68,7 +68,10 @@
         } else {
           msg.style.paddingLeft = '20px';
           }
+        
+        }
 
+          displayMessage();
 
       
     </script>
