--- a/wa/wa11/wa11.html
+++ b/wa/wa11/wa11.html
@@ -21,5 +21,7 @@
         </section>
       </div>
       <script src="wa11.js"></script>
+
+      <p>The page has been extended by linking the twitter button to twitter so the user is able to tweet the random quote after it is generated.</p>
 </body>
 </html>
