--- a/ica/ica12/ica12.html
+++ b/ica/ica12/ica12.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Bouncing balls</title>
-    <link rel="stylesheet" href="wa12.css">
+    <link rel="stylesheet" href="ica12.css">
   </head>
 
   <body>
     <h1>bouncing balls</h1>
     <canvas></canvas>
 
-    <script src="wa12.js"></script>
+    <script src="ica12.js"></script>
   </body>
 </html>
 
