updated css project

--- a/index.html
+++ b/index.html
@@ -1,8 +1,80 @@
-<html>
-    <head></head>
-    <body>
-        <p>Hello, World!</p>
-        <p>My name is ANNIKA SCHULTZE</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Annika Schultze</title>
+    <link href="midterm.css" rel="stylesheet" type="text/css">
+  </head>
+
+<body>
+
+  <div class="logo">
+    Annika Schultze- Finance and Marketing Major, Creative Technology & Design Minor
+  </div>
+
+  <nav>
+    <ul>
+      <li>
+        <a href="">Home</a>
+      </li>
+      <li>
+        <a href="">About Me</a>
+      </li>
+      <li>
+        <a href="">Projects</a>
+      </li>
+      <li>
+        <a href="">Socials</a>
+      </li>
+      <li>
+        <a href="">Contact Me</a>
+      </li>
+    </ul>
+  </nav>
+
+  <main class="grid">
+    <article>
+      <h1>
+        Who I am, what I do, and where I am going
+      </h1>
+      <img src="cssmidtermimages/annikaimage2copy.jpg" alt="headshot" class="feature">
+      <p>Hello, my name is Annika Schultze and I am a 4th year student at the University of Colorado in Boulder studying Finance and Marketing in the Leeds School of Business. I am also pursuing a Creative Technology and Design minor in which I will utilize programs including (but not limited to) the Adobe Creative Cloud, WordPress, and the Microsoft Suite. </p>
+
+      <p>During the summer of 2022, I interned at CCIG (Cherry Creek Insurance Group), an insurance company who is recognized as one of Colorado’s leading insurance brokerages, providing Property, Casualty, Risk Management, Benefits, Life, and Wealth Management services to clients throughout the region, CCIG is well known for insuring the Denver Broncos Football Team. At CCIG, I was a Marketing design and Development Intern, working directly under the Director or Marketing, taking on daily marketing tasks as well as undertaking a PowerPoint standardization project for the each sector of the company. Here, I gained knowledge and experience with the Microsoft Suite and the Adobe Suite and was also able to gain professional business skills through in-person meetings, presentations, and events.</p>
+
+      <p>During the summer of 2021, I interned at Schultze Asset Management, a hedge fund and investment firm that specializes in distressed securities. I worked closely with the Managing Director and Head of Business Development, gaining experience with client outreach and creating a master list of 13,000 potential contacts nation wide. During the last 5 weeks of the internship, I researched and analyzed the debt crisis of Puerto Rico and how the debt stack and restructuring plan could potentially effect certain positions the company had taken in the territory. I produced a 12 page report of my findings and presented those finding succinctly to the senior leadership team.</p>
+
+      <p>Outside of school and work life, I enjoy experiencing everything Boulder, and Colorado in general, have to offer. I spend my winters skiing and snowboarding Copper and Winter Park, and the summers hiking in Vail, Evergreen, or anywhere my family and I can find an exciting trail to take our dogs on. I also enjoy expressing myself creatively through painting and drawing and when I find myself with a few extra minutes of free time, I will typically be trying to go catch a Nuggets or Rockies game or grabbing a bite to eat Downtown with my friends or family. </p>
+
+      <p>Thank you for visiting my site and feel free to stay updated on my life through my LinkedIn, Creative Portfolio, and Resume</p>
+      <a href="https://www.linkedin.com/in/annikaschultze/">My LinkedIn</a>
+      <a href="https://annischultze.wixsite.com/my-site">My Creative Portfolio</a>
+      <a href="cssmidtermimages/AnnikaSchultzeResumeFebruary2023.pdf">My Resume</a>
+      
+
+    </article>
+
+    <aside>
+      <ul class="photos">
+        <li>
+          <img src="cssmidtermimages/annikaimage3.jpg" alt="pictureofme">
+        </li>
+        <li>
+          <img src="cssmidtermimages/denver.jpg" alt="culogo">
+        </li>
+        <li>
+          <img src="cssmidtermimages/leeds.jpg" alt="denver">
+        </li>
+        <li>
+          <img src="cssmidtermimages/culogo.jpg" alt="leeds">
+        </li>
+      </ul>
+
+    </aside>
+  </main>
+
+</body>
+
 </html>
 
