--- a/css-midterm/midterm.html
+++ b/css-midterm/midterm.html
@@ -16,19 +16,25 @@
   <nav>
     <ul>
       <li>
-        <a href="">Home</a>
+        <a href="/css-midterm/midterm.html">Home & CSS Midterm</a>
       </li>
       <li>
-        <a href="">About Me</a>
+        <a href="/html-midterm/page1.html">HTML Page 1</a>
       </li>
       <li>
-        <a href="">Projects</a>
+        <a href="/html-midterm/page2.html">HTML Page 2</a>
       </li>
       <li>
-        <a href="">Socials</a>
+        <a href="/html-midterm/page3.html">HTML Page 3</a>
       </li>
       <li>
-        <a href="">Contact Me</a>
+        <a href="/html-midterm/page4.html">HTML Page 4</a>
+      </li>
+      <li>
+        <a href="/html-midterm/page5.html">HTML Page 5</a>
+      </li>
+      <li>
+        <a href="/js-midterm/js-midterm.html">JS Midterm</a>
       </li>
     </ul>
   </nav>
